logs/dag_id=insert_date/run_id=manual__2025-01-10T144525.319283+0000/task_id=sql_ft_posting_f/attempt=1.log
[2025-01-10T14:45:31.981+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: insert_date.sql_ft_posting_f manual__2025-01-10T14:45:25.319283+00:00 [queued]>
[2025-01-10T14:45:31.995+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: insert_date.sql_ft_posting_f manual__2025-01-10T14:45:25.319283+00:00 [queued]>
[2025-01-10T14:45:31.995+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 3
[2025-01-10T14:45:32.168+0000] {taskinstance.py:2191} INFO - Executing <Task(SQLExecuteQueryOperator): sql_ft_posting_f> on 2025-01-10 14:45:25.319283+00:00
[2025-01-10T14:45:32.174+0000] {standard_task_runner.py:60} INFO - Started process 694 to run task
[2025-01-10T14:45:32.178+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'insert_date', 'sql_ft_posting_f', 'manual__2025-01-10T14:45:25.319283+00:00', '--job-id', '1481', '--raw', '--subdir', 'DAGS_FOLDER/insert_data.py', '--cfg-path', '/tmp/tmpnp513ozz']
[2025-01-10T14:45:32.182+0000] {standard_task_runner.py:88} INFO - Job 1481: Subtask sql_ft_posting_f
[2025-01-10T14:45:32.235+0000] {task_command.py:423} INFO - Running <TaskInstance: insert_date.sql_ft_posting_f manual__2025-01-10T14:45:25.319283+00:00 [running]> on host 711845a6becd
[2025-01-10T14:45:32.332+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='budanovsa' AIRFLOW_CTX_DAG_ID='insert_date' AIRFLOW_CTX_TASK_ID='sql_ft_posting_f' AIRFLOW_CTX_EXECUTION_DATE='2025-01-10T14:45:25.319283+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-01-10T14:45:25.319283+00:00'
[2025-01-10T14:45:32.333+0000] {sql.py:276} INFO - Executing: truncate table ds.ft_posting_f

INSERT INTO ds.ft_posting_f(
      credit_account_rk
    , debet_account_rk
    , credit_amount
    , debet_amount
    , oper_date
)
SELECT fpf."CREDIT_ACCOUNT_RK"
    , fpf."DEBET_ACCOUNT_RK" 
    , fpf."CREDIT_AMOUNT" 
    , fpf."DEBET_AMOUNT" 
    , to_date(fpf."OPER_DATE", 'dd.mm.YYYY')
  FROM stage.ft_posting_f fpf
 WHERE fpf."CREDIT_ACCOUNT_RK" IS NOT NULL
   AND fpf."DEBET_ACCOUNT_RK" IS NOT NULL; 
[2025-01-10T14:45:32.343+0000] {base.py:83} INFO - Using connection ID 'postgres-db' for task execution.
[2025-01-10T14:45:32.353+0000] {base.py:83} INFO - Using connection ID 'postgres-db' for task execution.
[2025-01-10T14:45:32.415+0000] {sql.py:450} INFO - Running statement: truncate table ds.ft_posting_f

INSERT INTO ds.ft_posting_f(
      credit_account_rk
    , debet_account_rk
    , credit_amount
    , debet_amount
    , oper_date
)
SELECT fpf."CREDIT_ACCOUNT_RK"
    , fpf."DEBET_ACCOUNT_RK" 
    , fpf."CREDIT_AMOUNT" 
    , fpf."DEBET_AMOUNT" 
    , to_date(fpf."OPER_DATE", 'dd.mm.YYYY')
  FROM stage.ft_posting_f fpf
 WHERE fpf."CREDIT_ACCOUNT_RK" IS NOT NULL
   AND fpf."DEBET_ACCOUNT_RK" IS NOT NULL; , parameters: None
[2025-01-10T14:45:32.419+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: "INSERT")
LINE 3: INSERT INTO ds.ft_posting_f(
        ^

[2025-01-10T14:45:32.429+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=insert_date, task_id=sql_ft_posting_f, execution_date=20250110T144525, start_date=20250110T144531, end_date=20250110T144532
[2025-01-10T14:45:32.447+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1481 for task sql_ft_posting_f (ОШИБКА:  ошибка синтаксиса (примерное положение: "INSERT")
LINE 3: INSERT INTO ds.ft_posting_f(
        ^
; 694)
[2025-01-10T14:45:32.470+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-01-10T14:45:32.498+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
